# Veritasor-Contracts

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
contracts/attestation/: Cargo.toml
contracts/attestation-registry/src/: lib.rs  test.rs
contracts/attestation-snapshot/src/: lib.rs  test.rs
contracts/attestation/src/: access_control_test.rs  anomaly_test.rs  attestor_staking_integration_test.rs  batch_submission_test.rs  dispute.rs  dispute_test.rs  dynamic_fees_test.rs  events.rs  events_test.rs  expiry_test.rs  extended_metadata_test.rs  gas_benchmark_test.rs  lib.rs  pause_test.rs  proof_hash_test.rs  property_test.rs  query_pagination_test.rs  rate_limit_test.rs  revocation_test.rs  test.rs
contracts/attestor-staking/src/: lib.rs  slashing_test.rs  test.rs
contracts/business-config/: Cargo.toml
contracts/business-config/src/: lib.rs  test.rs
contracts/common/: Cargo.toml
contracts/common/src/: lib.rs  merkle.rs  merkle_test.rs
contracts/integration-registry/: Cargo.toml
contracts/lender-consumer/: Cargo.toml
contracts/lender-consumer/src/: lib.rs  test.rs
contracts/lender-consumer/test_snapshots/test/: test_dispute_status.1.json  (+3 more)
contracts/network-config/: Cargo.toml
contracts/network-config/src/: lib.rs  test.rs
contracts/protocol-simulation/: Cargo.toml
contracts/protocol-simulation/src/: lib.rs  test.rs
contracts/revenue-curve/src/: test.rs
contracts/revenue-stream/src/: lib.rs  test.rs
docs/: attestation-property-testing.md  lender-attestation-consumer.md  network-configuration.md
