[workspace]
# Keep members in alphabetical order so new PRs add in the same place (reduces merge conflicts).
members = [
    "contracts/aggregated-attestations",
    "contracts/attestation",
    "contracts/attestation-snapshot",
    "contracts/audit-log",
    "contracts/common",
    "contracts/integration-registry",
    "contracts/network-config",
    "contracts/revenue-stream",
]
resolver = "2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
